--- a/Front/package.json
+++ b/Front/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.2",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5",
+    "zod": "^3.24.0-canary.20240523T174819"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
