--- a/Front/package.json
+++ b/Front/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
+    "isemail": "^3.2.0",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.4",
     "zod": "^3.24.0-canary.20240523T174819"
   },
   "devDependencies": {
